--- a/main.css
+++ b/main.css
@@ -1,7 +1,24 @@
+body {
+  font-family: TenaliRamakrishna-Regular !important;
+  background-image: url("img/bgnum5.png") !important;
+ z-index: 100; 
 
+}
+
+@font-face {
+  font-family: Renner;
+  src: url(../fonts/TenaliRamakrishna-Regular.ttf);
+}
 .mainDiv {
     max-width: 600pt;
     height: 100%;
+    background-image: url("img/bgnum5.png") !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+  width: 100%;
+  min-height: 100%;
+
+
 }
 
 .navBar {
@@ -49,15 +66,15 @@ font-size: 30px;
  }
 
  #addButton img{
-   height: 60px;
-     padding: 0px;
+   height: 50px !important;
+   width: 50px;
  }
 
 .addButton {
     padding: 30px 30px 30px 30px;
     z-index: 5;
     position: fixed;
-  bottom: 6%;
+  bottom: 10%;
   right: 0%;
 }
 
@@ -204,11 +221,6 @@ width: auto;
   padding: 5px;
 }
 
-
-  
-
-
-
 #plant-notes {
   padding-top: 10px;
   padding-bottom: 50px;
@@ -250,14 +262,60 @@ width: auto;
   display: none;
 }
 .redBadge {
-  position: absolute;
-  top:14px;
-  right:40px ;
-  padding: 8px;
-  border-radius: 50%;
-  background: red;
-  color: white;
+  position: relative;
+  top:-2px;
+  right:9px ;
 }
 #canvas {
   position: absolute;
+}
+
+.modal1 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 5; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(213, 219, 212, 0.4); /* Fallback color */
+  
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px 20px 20px 20px;
+  margin-top: 40%;
+  border: 1px solid #888;
+  width: 80%;
+  height: 25%;
+  
+}
+.modal-content p {
+  font-size: 16px;
+  margin-bottom: 30px;
+  margin-top: 35px;
+
+}
+
+.modal-content button {
+  background-color: transparent;
+  border: none;
+  margin-left: 70px;
+  text-align: right;
+}
+.close {
+  color: black;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin: auto;
+  margin-left:100px;
+}
+
+.fa-times {
+  font-size: 16px;
 }
