--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 body {
-  font-family: TenaliRamakrishna-Regular !important;
+  font-family: BalooThambi2-Regular !important;
   
 
 }
 
 @font-face {
-  font-family: Renner;
+  font-family: BalooThambi2-Regular;
   src: url(../fonts/BalooThambi2-Regular.ttf);
 }
 
