--- a/main.css
+++ b/main.css
@@ -205,6 +205,8 @@ margin-top: 0 !important;
 .saveBtn {
   margin-right: 12px !important;
   margin-top: 7px !important;
+  /* color:#002A02 !important; */
+  color:#000000 !important;
   
 }
 
