--- a/main.css
+++ b/main.css
@@ -13,20 +13,37 @@ body {
 
 h1 {
   font-size: 20px !important;
+  color: #002A02 !important;
 }
 
-.bgwhiteleaves {
-  background-image: url("img/BIGbgwhiteleaves.svg") !important;
-  background-size: initial;
+.bgAddPlant {
+  background: url("img/myPlants.png") no-repeat center top  !important;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+.bgNoToDo {
+  background: url("img/TodayBG.png") no-repeat center top  !important;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 .bgnoleaves {
   background-image: url("img/BIGbgplain.svg") !important;
   background-size: initial;
 }
+
 .bggreenleaves {
   background-image: url("img/BigBGwithleaves.svg") !important;
   background-size: initial;
-}
+
+} 
+
 .content img {
   
   object-fit: cover;
@@ -56,7 +73,7 @@ padding: 10px 10px 10px 10px;
    padding-right: 20px;
    z-index: 10;
   position: fixed;
-  top: 245px;
+  top: 222px;
   bottom: 0;
   left: 100;
   right: 0;
@@ -175,6 +192,18 @@ margin-bottom: 0px !important;
   margin-top: 40px;
 }
 
+h3 {
+  color: #002A02 !important;
+}
+
+h2 {
+  color: #002A02 !important;
+}
+
+label {
+  color: #002A02 !important;
+}
+
 .activity h3 {
 margin-top: 0 !important;
 
@@ -185,8 +214,12 @@ margin-top: 0 !important;
     padding-right: 50px;
 }
 
+p{
+  color:  rgb(95, 95, 95) !important;
+}
 .activity p {
   margin-bottom: 0px;
+  color: rgb(95, 95, 95) !important;
 }
 .plant-details .schedule div {
   height: 100px;
@@ -207,9 +240,9 @@ margin-top: 0 !important;
     height: 50px;
     width: 50px;
     font-size: 20px;
-    border:3px solid #0a4f1d;
+    border:3px solid #255f28;
  background-color: transparent;
-    color: #0a4f1d;
+    color: #255f28;
     border-radius: 100%;
 }
 
@@ -223,40 +256,39 @@ margin-top: 0 !important;
   margin-right: 12px !important;
   margin-top: 7px !important;
   /* color:#002A02 !important; */
-  color:#000000 !important;
+  color:#255f28 !important;
   
 }
 
 .cancelBtn {
   margin-left: 12px !important;
   margin-top: 7px !important;
-  color:#0a4f1d !important;
+  color:#255f28 !important;
 }
 
 
-/*.photo {
+.photo {
   height:250px;
   width: 100%;
   object-fit: cover;
-}*/
-.round{
-margin-top: 50px;
 }
 
-.photo {
-  height: 250px;
-  width: 250px;
-  border-radius: 100%;
-  object-fit: cover;
+
+.media-body span {
+    color: #002A02 !important;
 }
+
 
 .media-body img {
 top:6px;
+}
 
+.media-body {
+  margin-top: 12px !important;
 }
 
 .doneBtns {
- background-color: #0a4f1d !important;
+ background-color:#255f28 !important;
   color:#BCD5D5 !important;
 }
 
@@ -277,10 +309,11 @@ top:6px;
 
 
 .input-field input {
-    margin: 10px 0px 20px 10px;
-    width: auto;
+    margin: 20px 0px 20px 10px;
+    width: 180px;
     border: none !important;
 }
+
 
 .plant-name-div {
   margin-top: 30px;
@@ -345,11 +378,7 @@ h4 {
 }
 
 
-.input-field input{
-  margin-top: 20px;
-  width: 150px;
 
-}
 
 
 .input-field label {
@@ -413,7 +442,7 @@ margin-right: 10px;;
   margin: auto;
   padding: 10px 20px 20px 20px;
   margin-top: 40%;
-  border: 1px solid #0a4f1d;
+  border: 1px solid #255f28;
   width: 80%;
   height: 25%;
   
@@ -422,6 +451,8 @@ margin-right: 10px;;
   font-size: 18px;
   margin-bottom: 35px;
   margin-top: 40px;
+  color: rgb(95, 95, 95) !important
+
 }
 
 .modal-content button {
@@ -429,11 +460,11 @@ margin-right: 10px;;
   border: none;
   margin-left: 70px;
   text-align: right;
-  color:  #0a4f1d;
+  color:  #255f28;
   font-size: 20px;
 }
 .close {
-  color:  #0a4f1d;
+  color:  #255f28;
   float: right;
   font-size: 30px;
   font-weight: bold;
