--- a/main.css
+++ b/main.css
@@ -347,6 +347,8 @@ width: auto;
 #myPlantList button {
   width: 50%;
   padding: 5px;
+  border: 1px solid #BCD5D5;
+  border-radius: 3px;
 }
 
 #myPlantList li{
