--- a/main.css
+++ b/main.css
@@ -156,6 +156,11 @@ white-space: nowrap;
 margin-bottom: 0px !important;
 }
 
+
+.listBorder {
+border-bottom: none !important;
+}
+
 .content {
   padding-bottom: 30pt;
   padding-top: 30pt;
@@ -289,12 +294,20 @@ top:6px;
 
 .doneBtns {
  background-color:#255f28 !important;
-  color:#BCD5D5 !important;
+  color:white !important;
+  display: inline-block;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  font-family: BalooThambi2 !important;
 }
 
 .doneBtns:disabled {
   background-color:white !important;
-  color:#BCD5D5 !important;
+  color:rgb(230, 230, 230) !important;
   border: 1px solid #BCD5D5 !important;
 }
 
