--- a/main.css
+++ b/main.css
@@ -300,14 +300,14 @@ top:6px;
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+	text-shadow: 0 1px 1px rgba(59, 59, 59, 0.3);
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
   font-family: BalooThambi2 !important;
 }
 
 .doneBtns:disabled {
   background-color:white !important;
-  color:rgb(230, 230, 230) !important;
+  color:rgb(238, 238, 238) !important;
   border: 1px solid #BCD5D5 !important;
 }
 
